--- a/print.html
+++ b/print.html
@@ -4086,7 +4086,11 @@ static struct tm_allocator_api *tm_allocator_api;
 <p>In the cause of the rest of this walkthrough, we will discuss:<code>tab__create_menu_name</code>,  <code>tab__create</code>, <code>tab__destroy</code> , <code>tab__title</code> and <code>tab__ui</code>.</p>
 <h3 id="define-the-metadata-functions"><a class="header" href="#define-the-metadata-functions">Define the metadata functions</a></h3>
 <p>As we can see in our definition of the <code>custom_tab_vt</code> object we provide the <a href="https://ourmachinery.com/apidoc/plugins/ui/docking.h.html#structtm_tab_vt.create_menu_name()"><code>tm_tab_vt.create_menu_name()</code></a> and the <a href="https://ourmachinery.com/apidoc/plugins/ui/docking.h.html#structtm_tab_vt.title()"><code>tm_tab_vt.title()</code></a>. The <code>create_menu_name</code> is an optional function to allow you to provide a name for the create tab menu. In contrast, the <code>title()</code> function is not optional and is needed. It provides the name of the Tab, which the editor shall show in the tab bar.</p>
-<pre><code class="language-c">{{insert_code(env.TM_BOOK_CODE_SNIPPETS/plugins/my_tab.c,tab_meta}}
+<pre><code class="language-c">static const char *tab__create_menu_name(void) { return &quot;Custom Tab&quot;; }
+
+static const char *tab__title(tm_tab_o *tab, struct tm_ui_o *ui) {
+  return &quot;Custom Tab&quot;;
+}
 </code></pre>
 <h3 id="define-create-and-destroy-the-tab"><a class="header" href="#define-create-and-destroy-the-tab">Define create and destroy the Tab</a></h3>
 <p>As mentioned before, the data of a tab is bound to its lifetime. Therefore you should create the data on <code>create</code> and let go of it on <code>destroy.</code></p>
@@ -5980,7 +5984,18 @@ tm_entity_api-&gt;register_engine(ctx, &amp;movement_engine);
 </blockquote>
 <p>For Engines, you pass an instance of the <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_entity_system_i"><code>tm_entity_system_i</code></a> to the register function.</p>
 <pre><code class="language-c">// example:
-static void entity_register_engines_i(struct tm_entity_context_o *ctx) {
+const tm_entity_system_i winning_system = {
+    .ui_name = &quot;winning_system_update&quot;,
+    .hash = TM_STATIC_HASH(&quot;winning_system_update&quot;, 0x8f8676e599ca5c7aULL),
+    .update = winning_system_update,
+    .before_me[0] =
+        TM_STATIC_HASH(&quot;maze_generation_system&quot;, 0x7f1fcbd9ee85c3cfULL),
+    .exclusive = true,
+};
+tm_entity_api-&gt;register_system(ctx, &amp;winning_system);
+</code></pre>
+<p>For Systems, you pass an instance of the <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i"><code>tm_engine_i</code></a> to the register function.</p>
+<pre><code class="language-c">static void entity_register_engines_i(struct tm_entity_context_o *ctx) {
 
   tm_component_type_t keyboard_component = tm_entity_api-&gt;lookup_component_type(
       ctx, TM_TT_TYPE_HASH__KEYBOARD_COMPONENT);
@@ -6003,17 +6018,6 @@ static void entity_register_engines_i(struct tm_entity_context_o *ctx) {
   };
   tm_entity_api-&gt;register_engine(ctx, &amp;movement_engine);
 }
-</code></pre>
-<p>For Systems, you pass an instance of the <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i"><code>tm_engine_i</code></a> to the register function.</p>
-<pre><code class="language-c">const tm_entity_system_i winning_system = {
-    .ui_name = &quot;winning_system_update&quot;,
-    .hash = TM_STATIC_HASH(&quot;winning_system_update&quot;, 0x8f8676e599ca5c7aULL),
-    .update = winning_system_update,
-    .before_me[0] =
-        TM_STATIC_HASH(&quot;maze_generation_system&quot;, 0x7f1fcbd9ee85c3cfULL),
-    .exclusive = true,
-};
-tm_entity_api-&gt;register_system(ctx, &amp;winning_system);
 </code></pre>
 <p>In the above example the scheduler will schedule this system after the <code>maze_generation_system</code> system! Since we did not provide any further information in <code>.writes</code> or in <code>.components</code> the scheduler has no other information to work with. In this case it is best to not write anything!</p>
 <p><em>Example load function:</em></p>
@@ -6242,7 +6246,7 @@ struct tm_custom_component_t {
 <p>After this, we have the region in which we define the category of our component. The Editor will call it to categorize the component into the correct section. </p>
 <p>We need to define a <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i"><code>tm_ci_editor_ui_i</code></a> object which uses this function.  Later we register this function to the <a href="https://ourmachinery.com/apidoc/plugins/the_machinery_shared/component_interfaces/editor_ui_interface.h.html#structtm_ci_editor_ui_i"><code>tm_ci_editor_ui_i</code></a> aspect of our truth type. If you do not add this aspect later to your Truth Type, the Editor will not know that this Component Type exists, and you can not add it via the Editor, but in C.</p>
 <blockquote>
-<p><strong>Note:</strong> More about aspects you can read in the <a href="gameplay_coding/ecs/write_a_custom_component.html#">aspects guide</a>.</p>
+<p><strong>Note:</strong> More about aspects you can read in the <a href="https://ourmachinery.github.io/themachinery-books//the_truth/aspects.html">aspects guide</a>.</p>
 </blockquote>
 <pre><code class="language-c">static const char *component__category(void) { return TM_LOCALIZE(&quot;Samples&quot;); }
 
@@ -6446,7 +6450,7 @@ for (const tm_entity_blackboard_value_t *bb = data-&gt;blackboard_start;
 <p>The filter function will be called on all entity types to determine if the Engine shall run on them or not.  To provide this function is optional. If present it specifies a filter function called for each entity type (as</p>
 <p>represented by its component mask) to determine if the Engine should run on that entity type. If no <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i.filter()"><code>tm_engine_i.filter()</code></a> function is supplied and no <code>excludes[]</code> flags are set, the update will run on entity types that have all the components in the <code>components</code> array. If some <code>excludes[]</code> flags are set, the Engine will run on all entity types that <strong>do not</strong> have any of the components whose <code>excludes[]</code> flags are set, but have all the other components in the <code>components</code> array. </p>
 <blockquote>
-<p><strong>Note:</strong> For more information, check the <a href="https://ourmachinery.com//apidoc/plugins/entity/entity.h.html#structtm_engine_i.filter()">documentation</a>.</p>
+<p><strong>Note:</strong> For more information, check the <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_engine_i.filter()">documentation</a>.</p>
 </blockquote>
 <p>The last thing the register function needs to do is register the Engine to the Entity Context.</p>
 <pre><code class="language-c"> tm_entity_api-&gt;register_engine(ctx, &amp;custom_component_engine);
@@ -10246,7 +10250,14 @@ tm_ui_api-&gt;wrapped_text(ui, uistyle, text);
 </code></pre>
 <h4 id="the-set-root--root-function"><a class="header" href="#the-set-root--root-function">The set root / root function</a></h4>
 <p>The last function which we need is the set root function. This function allows us to set a root object of the Tab from the outside. Its code is quite straightforward:</p>
-<pre><code class="language-c">{{insert_code(env.TM_BOOK_CODE_SNIPPETS/custom_assets/open_asset/tab.c,root}}
+<pre><code class="language-c">void tab__set_root(tm_tab_o *inst, struct tm_the_truth_o *tt, tm_tt_id_t root) {
+  inst-&gt;asset = root;
+  inst-&gt;tt = tt;
+}
+
+static tm_tab_vt_root_t tab__root(tm_tab_o *tab) {
+  return (tm_tab_vt_root_t){tab-&gt;tt, tab-&gt;asset};
+}
 </code></pre>
 <blockquote>
 <p><strong>Note</strong>: The root function is also called when ever the current &quot;main&quot; Truth changes. This can be used to swap the truth.</p>
@@ -10880,7 +10891,8 @@ else
 };
 </code></pre>
 <p>After we have added this, we need actually to define the function itself:</p>
-<pre><code class="language-c">{{insert_code(env.TM_BOOK_CODE_SNIPPETS/ui/toolbars_overlays.c,tab__toolbars}}
+<pre><code class="language-c">static struct tm_toolbar_i *tab__toolbars(tm_tab_o *tab,
+                                          tm_temp_allocator_i *ta) {}
 </code></pre>
 <p>Within this function, we define our toolbars. Our toolbar will have an essential job! It will have a button that prints &quot;Hello World&quot;.</p>
 <p>To make this work, we need to create a C-Array of <a href="https://ourmachinery.com/apidoc/plugins/ui/toolbar.h.html#structtm_toolbar_i"><code>tm_toolbar_i</code></a> objects and add our toolbar to it. This interface expects the following things:</p>
@@ -10904,13 +10916,20 @@ else
 <li>The UI function is to be able to draw something.</li>
 <li>The draw_mode_mask to indicate where we want the toolbar to be drawn.</li>
 </ol>
-<pre><code class="language-c">{{insert_code(env.TM_BOOK_CODE_SNIPPETS/ui/toolbars_overlays.c,tab__toolbars,off}}
+<pre><code class="language-c">static struct tm_toolbar_i *tab__toolbars(tm_tab_o *tab,
+                                          tm_temp_allocator_i *ta) {}
 </code></pre>
 <p>In our UI function, we can add the button via the [<a href="https://ourmachinery.com/apidoc/plugins/ui/ui.h.html#structtm_ui_api"><code>tm_ui_api</code></a>](https://ourmachinery.com/apidoc/plugins/ui/ui.h.html#structtm_ui_api). Then log the string &quot;Hello World&quot; to the screen with the <a href="https://ourmachinery.com/apidoc/foundation/log.h.html#log.h">logger API</a>.</p>
 <blockquote>
 <p><strong>Note:</strong> You need include the <code>plugins/ui/ui.h</code> and the <code>foundation/log.h</code> as well as get the API's first!</p>
 </blockquote>
-<pre><code class="language-c">{{insert_code(env.TM_BOOK_CODE_SNIPPETS/ui/toolbars_overlays.c,toolbar__ui}}
+<pre><code class="language-c">static tm_rect_t toolbar__ui(tm_toolbar_i *toolbar, struct tm_ui_o *ui,
+                             const struct tm_ui_style_t *uistyle,
+                             tm_rect_t toolbar_r,
+                             enum tm_toolbar_draw_mode dm) {
+  // ui code...
+  return toolbar_r;
+}
 </code></pre>
 <h2 id="tab-overlays"><a class="header" href="#tab-overlays">Tab Overlays</a></h2>
 <p><img src="https://paper-attachments.dropbox.com/s_538DCFE5C2E14B8A7C343B96D5CD2C3E2C191E06DD3EF47F66924FDF7AE2C192_1617105468374_image.png" alt="An image with visualization modes enabled using the Visualize overlay, as well as a Renderer Statistics overlay. The Visualize overlay is found in Top right toolbar → Render → Lighting Module → Show as overlay. The Statistics overlay is found in Top right toolbar → Statistics." /></p>
